--- a/blocks/phone/index.html
+++ b/blocks/phone/index.html
@@ -1,1 +1,1 @@
-<button v-on='{ click: callMe }'>{{ attributes.label.value }}</button>
+<button v-on='click: callMe'>{{ attributes.label.value }}</button>
