--- a/blocks/input/index.html
+++ b/blocks/input/index.html
@@ -1,3 +1,3 @@
 <label for="block_{{$index}}">{{attributes.label.value}}</label>
 
-<input id="block_{{$index}}" type="text" v-model="{{attributes.value.value}}">
+<input id="block_{{$index}}" type="text" value="{{attributes.value.value}}">
