[#159] change label description, add color attribute and border-radius to button

--- a/blocks/submit/index.html
+++ b/blocks/submit/index.html
@@ -1,1 +1,2 @@
-<button>SUBMIT ME</button>
+<p style="display:none;"></p>
+<button style="background-color: {{ attributes.color.value }}" v-html="{{ attributes.innerHTML.label | i18n }}">{{ attributes.innerHTML.label | i18n }}</button>
