[#159] data communication for submit button
- changed button to call save event
- changed button to display text and disable itself after submission

--- a/blocks/submit/index.html
+++ b/blocks/submit/index.html
@@ -1,2 +1,8 @@
 <p style="display:none;"></p>
-<button style="background-color: {{ attributes.color.value }}" v-html="{{ attributes.innerHTML.label | i18n }}">{{ attributes.innerHTML.label | i18n }}</button>
+<button
+	style="background-color: {{ attributes.color.value }}"
+	v-on="click: save"
+	v-html="{{ attributes.innerHTML.label | i18n }}"
+>
+	{{ attributes.innerHTML.label | i18n }}
+</button>
