--- a/blocks/input/index.html
+++ b/blocks/input/index.html
@@ -1,3 +1,5 @@
 <label for="block_{{$index}}">{{attributes.label.value}}</label>
-
-<input id="block_{{$index}}" v-on="change: reportDataChange(this)" type="text" value="{{attributes.value.value}}">
+<form>
+	<input v-if="attributes.inputType.value == 0" id="block_{{$index}}" v-on="click: this.$dispatch('ping', this)" v-on="change: this.$dispatch('dataChange', '{{$index}}', 'MYKEY', '{{test}}')" type="text" v-model="{{test}}">
+	<textarea v-if="attributes.inputType.value == 1" id="block_{{$index}}" v-on="click: this.$dispatch('ping', this)" v-on="change: this.$dispatch('dataChange', '{{$index}}', 'MYKEY', '{{test}}')" v-model="{{test}}"></textarea>
+</form>
