[#197]move methods into methods object and remove brackets

--- a/blocks/spinner/index.html
+++ b/blocks/spinner/index.html
@@ -1,4 +1,4 @@
 <label for="block_{{$index}}">{{attributes.label.value}}</label>
-<button type="button" v-on="click: stepDown()">-</button>
+<button type="button" v-on="click: stepDown">-</button>
 <input id="block_{{$index}}" type="number" value="{{attributes.current.value}}" min="{{attributes.min.value}}" max="{{attributes.max.value}}" step="{{attributes.step.value}}">
-<button type="button" v-on="click: stepUp()">+</button>
+<button type="button" v-on="click: stepUp">+</button>
