--- a/blocks/data/index.html
+++ b/blocks/data/index.html
@@ -1,1 +1,1 @@
-<div v-component="dataRepresentation" v-with="dataSet : {}"></div>
+<div v-component="dataRepresentation" v-with="dataSet : currentDataSets"></div>
