--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <div id="app">
-            <div v-view="currentView" class="main"></div>
+            <div v-component="{{currentView}}" class="main"></div>
         </div>
         <script src="/index.js"></script>
         <!-- Analytics -->
